make grid responsive, avoid overflow

--- a/style.css
+++ b/style.css
@@ -65,18 +65,6 @@ body {
   overflow-x: hidden;
 }
 
-/* remove animations for folks who've turned them off */
-
-@media (prefers-reduced-motion: reduce) {
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
-}
 /* ==============
 Utility classes
 =============== */
@@ -86,10 +74,6 @@ Utility classes
   gap: var(--gap, 1rem);
 }
 
-/* .grid {
-  display: grid;
-  gap: var(--gap, 1rem);
-} */
 .d-block {
   display: block;
 }
@@ -100,12 +84,7 @@ Utility classes
 .container {
   padding-inline: 2em 0;
   margin: 0 auto;
-  /* max-width: 80rem; */
 }
-
-/* .hidden {
-  display: none;
-} */
 
 /* colors */
 
@@ -152,23 +131,22 @@ footer {
 }
 
 body {
-  max-width: 80vw;
+  /* max-width: 80vw; */
   margin: 0 auto;
 }
 
 .grid {
-  max-width: 60vw;
   margin-top: 0.5rem;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(52, 1fr);
-  grid-row-gap: 2px;
+  grid-gap: 0.2vw;
   flex-wrap: wrap;
-  /* box-shadow: -2px 6px 18px 3px rgba(0, 0, 0, 0.75); */
+  width: 97vw;
 }
 .grid div {
-  width: 13px;
-  height: 13px;
+  width: 1.5vw;
+  height: 1.5vw;
 }
 
 .week-spent {
@@ -193,4 +171,7 @@ body {
   width: 70vw;
   justify-content: space-between;
   margin-bottom: 2rem;
+}
+.signature {
+  margin-right: 5vw;
 }
